[package]
name = "pluton"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
industrial-io = { version = "0.5.2", path = "..", default-features = false }
nom = "7.1.3"
thiserror = "1.0.57"
uom = { version = "0.35.0", features = ["u64"] }
